@@ -7,7 +7,7 @@ Modelos básicos de projeto para a [JSimple Game Engine](https://github.com/davi
 
 Todos os templates podem ser abertos ou importados diretamente para a sua IDE de preferência. Apenas no Eclipse é necessário configurar uma opção da VM na configuração de execução (Run Configuration). A opção é a seguinte:
 
-    -Djava.library.path=lib/jinput-2.0.10-natives-all
+    -Djava.library.path=lib/jinput-2.0.10-natives-all --enable-native-access=ALL-UNNAMED
 
 Isso se faz necessário para que as biblitecas nativas, que são usadas pela JInput, sejam carregadas apropriadamente.
 
@@ -22,6 +22,6 @@ Basic project templates for [JSimple Game Engine](https://github.com/davidbuzatt
 
 All templates can be opened or imported directly into your preferred IDE. Only in Eclipse is it necessary to configure a VM option in the Run Configurations. The option is as follows:
 
-    -Djava.library.path=lib/jinput-2.0.10-natives-all
+    -Djava.library.path=lib/jinput-2.0.10-natives-all --enable-native-access=ALL-UNNAMED
     
 This is necessary so that the native libraries used by JInput are loaded properly.
